I changed my name

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     </div>
                     <div class="slide">
                         <img src="image2.jpg" alt="Project 2">
-                        <p>Project 2</p>
+                        <p>Mariachi</p>
                     </div>
                     <div class="slide">
                         <img src="image3.jpg" alt="Project 3">
-                        <p>Project 3</p>
+                        <p>Zorro</p>
                     </div>
                 </div>
                 <button class="prev" onclick="moveSlide(1)">&#10094;</button>
