--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
                 <li><a href="#categories">Categories</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -26,8 +26,8 @@
         <p>Introduce yourself and your passion for design here.</p>
     </section>
     
-    <section id="work">
-        <h2>My Work</h2>
+    <section id="Portfolio">
+        <h2>My Portfolio</h2>
         
         <div class="gallery-container">
             <h3>Featured Projects</h3>
