--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Jordan Perez. All rights reserved.</p>
+        <p>© 2025 Jordan Draws. All rights reserved.</p>
     </footer>
 
    
