--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-/* 🔹 Adobe Fonts Integration */
+/* Adobe Fonts Integration */
 @import url("https://use.typekit.net/iud7cpa.css");
 
-/* 🔹 Apply Font to Body */
+/*Apply Font to Body */
 body {
     font-family: "ff-providence-sans-web-pro", sans-serif; /* Correct Adobe Font */
     margin: 0;
@@ -9,7 +9,7 @@ body {
     text-align: center;
 }
 
-/* 🔹 Apply Font to Header */
+/*Apply Font to Header */
 h1 {
     font-family: "ff-providence-sans-web-pro", sans-serif; /* Correct Adobe Font */
     font-size: 48px; /* Adjust size */
