--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Adobe Fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/iud7cpa.css"> 
     
+    <!-- Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/iud7cpa.css">
+
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 
